[gd_scene load_steps=6 format=2]

[ext_resource path="res://scene/Menu.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/GestionTable.gd" type="Script" id=2]
[ext_resource path="res://scripts/Color_MainPanel.gd" type="Script" id=3]
[ext_resource path="res://scene/ButtonExit.tscn" type="PackedScene" id=4]
[ext_resource path="res://scripts/PanelContainer.gd" type="Script" id=5]

[node name="GestionTable" type="Node2D"]
script = ExtResource( 2 )

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
script = ExtResource( 5 )

[node name="MainPanel" type="Panel" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 593.0
script = ExtResource( 3 )

[node name="PanelMenu" parent="PanelContainer/MainPanel" instance=ExtResource( 1 )]
anchor_left = 0.001
anchor_top = 0.002
anchor_right = 1.0
anchor_bottom = 0.056
margin_left = -0.00999999
margin_top = -0.172
margin_right = -1.0
margin_bottom = 0.183998

[node name="ButtonExit" parent="PanelContainer/MainPanel" instance=ExtResource( 4 )]

[node name="QueryPanel" type="Panel" parent="PanelContainer/MainPanel"]
anchor_left = 0.001
anchor_top = 0.075
anchor_right = 0.999
anchor_bottom = 0.998
margin_left = -1.01
margin_top = 0.0499992
margin_right = 0.00994873
margin_bottom = 0.171997

[node name="PanelTable" type="Panel" parent="PanelContainer/MainPanel/QueryPanel"]
anchor_left = 0.056
anchor_top = 0.024
anchor_right = 0.207
anchor_bottom = 0.142
margin_left = 0.496002
margin_top = 0.0159998
margin_right = 0.136993
margin_bottom = 0.177994

[node name="ButtonTables" type="Button" parent="PanelContainer/MainPanel/QueryPanel/PanelTable"]
anchor_left = 0.062
anchor_top = 0.25
anchor_right = 0.947
anchor_bottom = 0.75
margin_left = 0.575999
margin_right = 0.0559998
text = "Affichage Tables"

[node name="PanelPK" type="Panel" parent="PanelContainer/MainPanel/QueryPanel"]
anchor_left = 0.056
anchor_top = 0.261
anchor_right = 0.207
anchor_bottom = 0.379
margin_left = 0.496002
margin_top = -0.201004
margin_right = 0.136993
margin_bottom = -0.0390015

[node name="LabelPK" type="Label" parent="PanelContainer/MainPanel/QueryPanel/PanelPK"]
anchor_left = 0.158
anchor_right = 0.868
anchor_bottom = 0.25
margin_left = -0.0160007
margin_right = 0.0639954
text = "Work in Progress"
align = 1
valign = 1

[node name="ButtonPK" type="Button" parent="PanelContainer/MainPanel/QueryPanel/PanelPK"]
anchor_left = 0.053
anchor_top = 0.25
anchor_right = 0.947
anchor_bottom = 0.75
margin_left = -0.0560007
margin_right = 0.0559998
text = "Reset clé Primaire"

[node name="PanelColumn" type="Panel" parent="PanelContainer/MainPanel/QueryPanel"]
anchor_left = 0.056
anchor_top = 0.261
anchor_right = 0.207
anchor_bottom = 0.379
margin_left = 0.496002
margin_top = -64.201
margin_right = 0.136993
margin_bottom = -64.039

[node name="LabelColumn" type="Label" parent="PanelContainer/MainPanel/QueryPanel/PanelColumn"]
visible = false
anchor_left = -1.375
anchor_top = 3.5
anchor_right = -0.125
anchor_bottom = 5.5
margin_left = 225.0
margin_top = -224.0
margin_right = 155.0
margin_bottom = -336.0
text = "Affichage Colonne"
align = 1
valign = 1

[node name="InputColonne" type="TextEdit" parent="PanelContainer/MainPanel/QueryPanel/PanelColumn"]
anchor_left = -0.263
anchor_right = 1.684
anchor_bottom = 0.625
margin_left = -0.0239983
margin_right = 0.0319824

[node name="ButtonColumn" type="Button" parent="PanelContainer/MainPanel/QueryPanel/PanelColumn"]
margin_left = 8.0
margin_top = 40.0
margin_right = 141.0
margin_bottom = 64.0
text = "Affichage Colonnes"

[node name="PanelFK" type="Panel" parent="PanelContainer/MainPanel/QueryPanel"]
anchor_left = 0.056
anchor_top = 0.379
anchor_right = 0.207
anchor_bottom = 0.497
margin_left = 0.496002
margin_top = -0.0390015
margin_right = 0.136993
margin_bottom = 0.122986

[node name="LabelFK" type="Label" parent="PanelContainer/MainPanel/QueryPanel/PanelFK"]
anchor_right = 0.947
anchor_bottom = 0.375
margin_right = 0.0559998
text = "Création clé étrangère"
align = 1
valign = 1

[node name="ButtonFK" type="Button" parent="PanelContainer/MainPanel/QueryPanel/PanelFK"]
anchor_left = 0.183
anchor_top = 0.29
anchor_right = 0.789
anchor_bottom = 0.875
margin_left = -3.816
margin_top = 13.44
margin_right = 0.071991
text = "Clé Etrangère"

[node name="PanelRenameTable" type="Panel" parent="PanelContainer/MainPanel/QueryPanel"]
margin_left = 57.0
margin_top = 269.0
margin_right = 209.0
margin_bottom = 333.0

[node name="LabelRenameTable" type="Label" parent="PanelContainer/MainPanel/QueryPanel/PanelRenameTable"]
visible = false
anchor_left = -1.375
anchor_top = 3.5
anchor_right = -0.125
anchor_bottom = 5.5
margin_left = 217.0
margin_top = -224.0
margin_right = 163.0
margin_bottom = -338.0
text = "Renommage Table"
align = 1
valign = 1

[node name="InputRenameTable" type="TextEdit" parent="PanelContainer/MainPanel/QueryPanel/PanelRenameTable"]
anchor_left = -0.263
anchor_right = 1.684
anchor_bottom = 0.625
margin_left = -0.0239983
margin_right = 0.0319824

[node name="ButtonRenameTable" type="Button" parent="PanelContainer/MainPanel/QueryPanel/PanelRenameTable"]
anchor_left = 0.158
anchor_top = 0.625
anchor_right = 0.829
anchor_bottom = 1.0
margin_left = -0.0160007
margin_right = -0.00801086
text = "Rename Table"

[node name="PanelRenameColumn" type="Panel" parent="PanelContainer/MainPanel/QueryPanel"]
anchor_left = 0.056
anchor_top = 0.616
anchor_right = 0.207
anchor_bottom = 0.734
margin_left = 0.496002
margin_top = -0.256042
margin_right = 0.136993
margin_bottom = -0.0940247

[node name="LabelRenameColumn" type="Label" parent="PanelContainer/MainPanel/QueryPanel/PanelRenameColumn"]
visible = false
anchor_left = -1.375
anchor_top = 3.5
anchor_right = -0.125
anchor_bottom = 5.5
margin_left = 217.0
margin_top = -224.0
margin_right = 163.0
margin_bottom = -336.0
text = "Renommage Colonne"
align = 1
valign = 1

[node name="InputRenameColumn" type="TextEdit" parent="PanelContainer/MainPanel/QueryPanel/PanelRenameColumn"]
anchor_left = -0.263
anchor_right = 1.684
anchor_bottom = 0.625
margin_left = -0.0239983
margin_right = 0.0319824

[node name="ButtonRenameColumn" type="Button" parent="PanelContainer/MainPanel/QueryPanel/PanelRenameColumn"]
anchor_left = 0.105
anchor_top = 0.625
anchor_right = 0.875
anchor_bottom = 1.0
margin_left = 0.039999
margin_right = -1.52588e-05
text = "Rename Column"

[node name="NodeButtonTable" type="Control" parent="PanelContainer/MainPanel/QueryPanel"]
visible = false
margin_left = -7.0
margin_top = -7.0
margin_right = -7.0
margin_bottom = -7.0

[node name="Panel" type="Panel" parent="PanelContainer/MainPanel/QueryPanel/NodeButtonTable"]
margin_left = 384.0
margin_top = 20.0
margin_right = 1016.0
margin_bottom = 532.0

[node name="NodeButtonColumn" type="Control" parent="PanelContainer/MainPanel/QueryPanel"]
visible = false
margin_left = -7.0
margin_top = -7.0
margin_right = -7.0
margin_bottom = -7.0

[node name="Panel" type="Panel" parent="PanelContainer/MainPanel/QueryPanel/NodeButtonColumn"]
margin_left = 384.0
margin_top = 20.0
margin_right = 1016.0
margin_bottom = 532.0

[node name="QueryResult" type="Panel" parent="PanelContainer/MainPanel"]
visible = false
anchor_top = 0.075
anchor_bottom = 0.075
margin_left = 697.0
margin_top = 269.05
margin_right = 1009.0
margin_bottom = 541.05

[node name="LabelResult" type="Label" parent="PanelContainer/MainPanel/QueryResult"]
anchor_left = 699.065
anchor_top = 2336.11
anchor_right = 798.079
anchor_bottom = 2450.86
margin_left = -218076.0
margin_top = -635421.0
margin_right = -248841.0
margin_bottom = -666571.0
text = "Sortie"
align = 1
valign = 1

[node name="ResultQuery" type="TextEdit" parent="PanelContainer/MainPanel/QueryResult"]
anchor_left = 644.15
anchor_top = 2623.0
anchor_right = 989.275
anchor_bottom = 4786.97
margin_left = -200967.0
margin_top = -713392.0
margin_right = -308358.0
margin_bottom = -1.3018e+06
readonly = true

[node name="ButtonCopy" type="Button" parent="PanelContainer/MainPanel/QueryResult"]
anchor_left = 0.641
anchor_top = 0.088
anchor_right = 0.923
anchor_bottom = 0.176
margin_left = 0.00799561
margin_top = 0.0639973
margin_right = 0.0239868
margin_bottom = 0.127995
mouse_default_cursor_shape = 2
text = "Copy"

[connection signal="pressed" from="PanelContainer/MainPanel/QueryPanel/PanelTable/ButtonTables" to="." method="_on_ButtonTables_pressed"]
[connection signal="pressed" from="PanelContainer/MainPanel/QueryPanel/PanelPK/ButtonPK" to="." method="_on_ButtonPK_pressed"]
[connection signal="pressed" from="PanelContainer/MainPanel/QueryPanel/PanelColumn/ButtonColumn" to="." method="_on_ButtonColumn_pressed"]
[connection signal="pressed" from="PanelContainer/MainPanel/QueryPanel/PanelFK/ButtonFK" to="." method="_on_ButtonFK_pressed"]
[connection signal="focus_entered" from="PanelContainer/MainPanel/QueryPanel/PanelRenameTable/InputRenameTable" to="." method="_on_InputRenameTable_focus_entered"]
[connection signal="pressed" from="PanelContainer/MainPanel/QueryPanel/PanelRenameTable/ButtonRenameTable" to="." method="_on_ButtonRenameTable_pressed"]
[connection signal="focus_entered" from="PanelContainer/MainPanel/QueryPanel/PanelRenameColumn/InputRenameColumn" to="." method="_on_InputRenameColumn_focus_entered"]
[connection signal="pressed" from="PanelContainer/MainPanel/QueryPanel/PanelRenameColumn/ButtonRenameColumn" to="." method="_on_ButtonRenameColumn_pressed"]
[connection signal="pressed" from="PanelContainer/MainPanel/QueryResult/ButtonCopy" to="." method="_on_ButtonCopy_pressed"]
